--- a/web_app/index.html
+++ b/web_app/index.html
@@ -93,6 +93,66 @@
               <button id="remove-all-liquidity">Remove All Liquidity</button>
             </div>
           </div>
+
+          <div id="futures-control">
+            <h4 class="futures-control-title">Futures Contracts</h4>
+            <p class="section-description">Create and manage futures contracts for tokens and ETH</p>
+
+            <div id="futures-tabs">
+              <button class="tab-button active" onclick="openTab(event, 'create-buy-future')">Create Buy Future</button>
+              <button class="tab-button" onclick="openTab(event, 'create-sell-future')">Create Sell Future</button>
+              <button class="tab-button" onclick="openTab(event, 'view-futures')">View Futures</button>
+            </div>
+
+            <div id="create-buy-future" class="tab-content" style="display: block;">
+              <div class="form-group">
+                <label for="buy-future-exchange-rate">Exchange Rate:</label>
+                <input id="buy-future-exchange-rate" type="text" placeholder="Enter maximum exchange rate"/>
+                <small class="form-help">Maximum price you're willing to pay for 1 token in ETH * 1e18</small>
+              </div>
+
+              <div class="form-group">
+                <label for="buy-future-amount">Amount in ETH (wei):</label>
+                <input id="buy-future-amount" type="text" placeholder="Enter ETH amount in wei"/>
+              </div>
+
+              <div class="form-group">
+                <label for="buy-future-duration">Duration (days):</label>
+                <input id="buy-future-duration" type="text" placeholder="Enter duration in days"/>
+              </div>
+
+              <button id="create-buy-future-btn">Create Buy Future</button>
+            </div>
+
+            <div id="create-sell-future" class="tab-content">
+              <div class="form-group">
+                <label for="sell-future-exchange-rate">Exchange Rate (token per wei * 1e18):</label>
+                <input id="sell-future-exchange-rate" type="text" placeholder="Enter minimum exchange rate"/>
+                <small class="form-help">Minimum price you're willing to accept for 1 ETH in tokens * 1e18</small>
+              </div>
+
+              <div class="form-group">
+                <label for="sell-future-amount">Amount in Tokens:</label>
+                <input id="sell-future-amount" type="text" placeholder="Enter token amount"/>
+              </div>
+
+              <div class="form-group">
+                <label for="sell-future-duration">Duration (days):</label>
+                <input id="sell-future-duration" type="text" placeholder="Enter duration in days"/>
+              </div>
+
+              <button id="create-sell-future-btn">Create Sell Future</button>
+            </div>
+
+            <div id="view-futures" class="tab-content">
+              <div class="form-group">
+                <button id="refresh-futures">Refresh Futures</button>
+              </div>
+              <div id="futures-list">
+                <p>No futures contracts found.</p>
+              </div>
+            </div>
+          </div>
         </article>
 
       </div>
